# drone

./: .gitignore  README.md
cad/calibration_cube/: calibration_cube.20250824-201129.FCBak  calibration_cube.20250924-080308.FCBak  calibration_cube.FCStd
cad/calibration_cube/exports/: calibration_cube-arduino_mount.stl  calibration_cube-breadboard_mount.stl  calibration_cube-cube_shape_1.stl  calibration_cube-cube_shape_2.stl  calibration_cube-cube_shape_3.stl  calibration_cube-cube_shape_4.stl  calibration_cube-imu_mount.gx  calibration_cube-imu_mount.stl  calibration_cube-pi_mount.stl  calibration_cube.stl
code/ahrs/: ahrs.h  main.cpp
code/drivers/icm20948/: CMakeLists.txt  SPI.h  spi_test.cpp
code/drivers/lsm9ds1/: CMakeLists.txt  driver.h  test.cpp
code/flight-controller/: CMakeLists.txt  CmakeLists.txt  ahrs.cpp  ahrs.h  calibrate.cpp  flight-controller.cpp  main.cpp  test  test.cpp
code/flight-controller/ahrs/: ahrs.cpp  ahrs.h
code/flight-controller/drivers/: ICM-20948_driver_I2C.cpp  ICM-20948_driver_threaded.cpp
code/old-flight-controller/: CMakeLists.txt  main.cpp  simple_test.cpp
pcb/IMU/: IMU.kicad_pcb  IMU.kicad_pro  IMU.kicad_sch  fp-info-cache
pcb/IMU/IMU_gerber/: IMU-B_Cu.gbr  IMU-B_Mask.gbr  (+10 more)
pcb/power_supply_hat/: fp-info-cache  power_supply_hat.kicad_pcb  power_supply_hat.kicad_prl  power_supply_hat.kicad_pro  power_supply_hat.kicad_sch
pcb/rpi_hat/: fp-info-cache  rpi_hat.kicad_pcb  rpi_hat.kicad_prl  rpi_hat.kicad_pro  rpi_hat.kicad_sch
pcb/uno_shield/: uno_shield.kicad_prl  uno_shield.kicad_pro  uno_shield.kicad_sch
(+47 files in other folders)
